--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
         <div class="contact input">
           <input type="text" placeholder="Add contact..." v-model="newContact" v-on:keyup.enter="addContact()">
         </div>
-        <div class="contact hovered" v-for="contact in contacts" v-on:click="toggleChat(contact.id)"
+        <div class="contact hovered" v-for="contact in contacts" v-on:click="toggleChat(contact)"
         v-bind:class="{ active: currentChat === contact.id }">
           <p class="username">{{contact['username']}}</p>
           <p class="new-messages" v-if="contact['new'] != 0">{{contact['new']}}</p>
@@ -112,12 +112,12 @@
         };
         axios.post('/auth/' + this.authTab, userData).then(res => {
           this.authError = '';
-          console.log(res);
           const data = res.data;
           if (data.success) {
             this.notAuth = false;
             this.username = data.message.username;
             localStorage.setItem('chatiqueue:token', data.message.token);
+            location.reload();
           }  else {
             this.authError = data.message;
           }
@@ -148,12 +148,18 @@
         socket.emit('chat:new', [ this.newContact, this.username ]);
         this.newContact = '';
       },
-      toggleChat: function(id) {
-        this.currentChat = id;
+      toggleChat: function(contact) {
+        this.currentChat = contact.id;
+        contact.new = 0;
         this.messages = [];
       },
       sendMessage: function() {
-
+        socket.emit('message:new', {
+          author: this.username,
+          message: this.currentMessage,
+          chatId: this.currentChat
+        });
+        this.currentMessage = '';
       }
     }
   })
